Tweak - Spacing issue on upgrade modal dialogues

--- a/assets/css/_confirm.scss
+++ b/assets/css/_confirm.scss
@@ -28,8 +28,8 @@ div.jconfirm {
 				display: block;
 
 				.jconfirm-content {
+					margin-bottom: 0;
 					overflow: initial;
-					white-space: pre-line;
 				}
 			}
 
